# api-binding

./: Cargo.toml  README.md
src/: client.rs  client_prelude.rs  endpoint.rs  endpoint_prelude.rs  error.rs  lib.rs  params.rs  query.rs
