[package]
name = "api_binding"
description = "A library to create API binding libraries, inspired by the Gitlab bindings"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.26"
http = "0.2.9"
serde = "1.0.164"
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.4.0"
